Fix spacing between input items

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -50,16 +50,40 @@ USWDS COMPONENT OVERRIDES
   margin-right: 0;
 }
 
-.usa-form-group {
-    margin-top: 0 !important;
-}
-
 .usa-combo-box.usa-combo-box {
   width: 100%;
 }
 
 .usa-table.usa-table {
   margin: 0;
+}
+
+/* Fit error border to DatePicker */
+.input-date-label + .usa-input--error {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.input-date-label
+  + .usa-input--error
+  > .usa-date-picker__wrapper
+  > input {
+  margin-top: 0;
+}
+
+/* Fit error border to TimePicker */
+.input-time-label + div > .usa-input--error {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.input-time-label + div > .usa-input--error > .usa-combo-box__input {
+  margin-top: 0;
+}
+
+/* Remove margin-top from TimePicker input */
+.input-time-label + div {
+  margin-top: 0;
 }
 
 .usa-logo.usa-logo {
@@ -79,6 +103,6 @@ USWDS COMPONENT OVERRIDES
 
 @media (min-width: 480px) {
   .usa-logo.usa-logo {
-      margin-left: 0;
+    margin-left: 0;
   }
 }
